# basicMachineLearning

./: .gitignore  CGAN.py  Pipfile  README.md  cv_util.py  featureExtractor.py  fileSelector.py  gradcam.py  landmarkExtractor.py  lombardFileSelector.py  mixNoise.py  pyproject.toml  setup.py  vae.py
test/: automl_test.py  cmu_mosei_test.py  conftest.py  cv_test.py  dlib_test.py  featureExtractor_test.py  gan_test.py  nditer_test.py  ssd_keras_test.py  vae_test.py
util/: cv_util.py
visualization/: readme
