[tool.poetry]
name = "basicmachinelearning"
version = "0.1.0"
description = ""
authors = ["Masato Tsuchiya <malk271828@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.1"
colorama = "^0.4.3"
imageio = "^2.8.0"
keras = "2.2.4"
sklearn = "^0.0"
scikit-image = "0.15.0"
pandas = "^1.0.3"
tensorflow = "1.14.0"
torch = "1.2.0"
pytest = "^5.4.1"
librosa = "^0.7.2"
opencv-python = "^4.2.0"
tqdm = "^4.43.0"
dlib = "^19.19.0"
imutils = "^0.5.3"
pysnooper = "^0.3.0"
GoFPatterns = {git = "https://github.com/malk271828/GoFPatterns.git"}
pyfunctor = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
